--- a/src/page/Imageview/index.scss
+++ b/src/page/Imageview/index.scss
@@ -4,3 +4,10 @@
   display: flex;
   flex-direction: row;
 }
+
+.rasterpanel {
+  flex-basis: 0px;
+  flex-grow: 5;
+  display: flex;
+  flex-direction: column;
+}
