--- a/src/page/Imageview/index.scss
+++ b/src/page/Imageview/index.scss
@@ -1,6 +1,6 @@
 .imageview {
   width: 100%;
-  height: 700px;
+  height: 100%;
   display: flex;
   flex-direction: row;
 }
@@ -10,4 +10,10 @@
   flex-grow: 5;
   display: flex;
   flex-direction: column;
+}
+.ant-tabs-content {
+  height: 100%;
+}
+.ant-tabs-tabpane {
+  height: 100%;
 }
