--- a/src/page/Imageview/index.scss
+++ b/src/page/Imageview/index.scss
@@ -5,11 +5,15 @@
   flex-direction: row;
 }
 
+.raster-view {
+  height: 90%;
+  display: flex;
+  flex-direction: row;
+}
+
 .rasterpanel {
   flex-basis: 0px;
   flex-grow: 5;
-  display: flex;
-  flex-direction: column;
 }
 .ant-tabs-content {
   height: 100%;
